@@ -3,23 +3,28 @@ package it.unipr.ailab.jadescript.semantics.expression;
 import com.google.inject.Singleton;
 import it.unipr.ailab.jadescript.jadescript.Matches;
 import it.unipr.ailab.jadescript.jadescript.Multiplicative;
+import it.unipr.ailab.jadescript.semantics.BlockElementAcceptor;
 import it.unipr.ailab.jadescript.semantics.SemanticsModule;
 import it.unipr.ailab.jadescript.semantics.context.staticstate.ExpressionDescriptor;
 import it.unipr.ailab.jadescript.semantics.context.staticstate.StaticState;
 import it.unipr.ailab.jadescript.semantics.expression.patternmatch.PatternMatchInput;
 import it.unipr.ailab.jadescript.semantics.expression.patternmatch.PatternMatcher;
 import it.unipr.ailab.jadescript.semantics.expression.patternmatch.PatternType;
-import it.unipr.ailab.jadescript.semantics.helpers.TypeHelper;
 import it.unipr.ailab.jadescript.semantics.helpers.ValidationHelper;
 import it.unipr.ailab.jadescript.semantics.jadescripttypes.IJadescriptType;
-import it.unipr.ailab.jadescript.semantics.BlockElementAcceptor;
+import it.unipr.ailab.jadescript.semantics.jadescripttypes.implicit.ImplicitConversionsHelper;
+import it.unipr.ailab.jadescript.semantics.jadescripttypes.index.BuiltinTypeProvider;
+import it.unipr.ailab.jadescript.semantics.jadescripttypes.relationship.TypeComparator;
 import it.unipr.ailab.maybe.Maybe;
+import it.unipr.ailab.maybe.MaybeList;
 import org.eclipse.xtext.validation.ValidationMessageAcceptor;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Stream;
+
+import static it.unipr.ailab.jadescript.semantics.jadescripttypes.relationship.TypeRelationshipQuery.equal;
+import static it.unipr.ailab.jadescript.semantics.jadescripttypes.relationship.TypeRelationshipQuery.superTypeOrEqual;
 
 /**
  * Created on 28/12/16.
@@ -48,9 +53,8 @@ public class MultiplicativeExpressionSemantics
         Maybe<Multiplicative> input,
         StaticState state
     ) {
-        final List<Maybe<Matches>> matches = Maybe.toListOfMaybes(
-            input.__(Multiplicative::getMatches)
-        );
+        final MaybeList<Matches> matches =
+            input.__toList(Multiplicative::getMatches);
         return advanceAssociative(matches, state);
     }
 
@@ -92,12 +96,14 @@ public class MultiplicativeExpressionSemantics
 
 
     private String associativeCompile(
-        List<Maybe<Matches>> operands,
-        List<Maybe<String>> operators,
+        MaybeList<Matches> operands,
+        MaybeList<String> operators,
         StaticState state,
         BlockElementAcceptor acceptor
     ) {
-        if (operands.isEmpty()) return "";
+        if (operands.isEmpty()) {
+            return "";
+        }
         final MatchesExpressionSemantics mes =
             module.get(MatchesExpressionSemantics.class);
 
@@ -131,7 +137,7 @@ public class MultiplicativeExpressionSemantics
 
 
     private StaticState advanceAssociative(
-        List<Maybe<Matches>> operands,
+        MaybeList<Matches> operands,
         StaticState state
     ) {
         final MatchesExpressionSemantics mes =
@@ -157,12 +163,12 @@ public class MultiplicativeExpressionSemantics
 
 
     private IJadescriptType associativeInfer(
-        List<Maybe<Matches>> operands,
-        List<Maybe<String>> operators,
+        MaybeList<Matches> operands,
+        MaybeList<String> operators,
         StaticState state
     ) {
         if (operands.isEmpty()) {
-            return module.get(TypeHelper.class).BOTTOM.apply(
+            return module.get(BuiltinTypeProvider.class).nothing(
                 "No operands found."
             );
         }
@@ -183,6 +189,41 @@ public class MultiplicativeExpressionSemantics
     }
 
 
+    private boolean isDuration(IJadescriptType type) {
+        final BuiltinTypeProvider builtins =
+            module.get(BuiltinTypeProvider.class);
+        final TypeComparator comparator = module.get(TypeComparator.class);
+
+        return comparator.compare(builtins.duration(), type)
+            .is(superTypeOrEqual());
+    }
+
+
+    private boolean isNumber(IJadescriptType type) {
+        return isInteger(type) || isReal(type);
+    }
+
+
+    private boolean isInteger(IJadescriptType type) {
+        final BuiltinTypeProvider builtins =
+            module.get(BuiltinTypeProvider.class);
+        final TypeComparator comparator = module.get(TypeComparator.class);
+
+        return comparator.compare(builtins.integer(), type)
+            .is(superTypeOrEqual());
+    }
+
+
+    private boolean isReal(IJadescriptType type) {
+        final BuiltinTypeProvider builtins =
+            module.get(BuiltinTypeProvider.class);
+        final TypeComparator comparator = module.get(TypeComparator.class);
+
+        return comparator.compare(builtins.real(), type)
+            .is(superTypeOrEqual());
+    }
+
+
     private String compilePair(
         String op1c,
         StaticState state,
@@ -199,18 +240,14 @@ public class MultiplicativeExpressionSemantics
                 state,
                 acceptor
             );
-        final TypeHelper typeHelper = module.get(TypeHelper.class);
 
-        if (t1.typeEquals(typeHelper.DURATION)
-            && t2.typeEquals(typeHelper.DURATION)) {
+        if (isDuration(t1) && isDuration(t2)) {
             if (op.wrappedEquals("/")) {
                 return "(float) jadescript.lang.Duration.divide(" + op1c +
                     ", " + op2c + ")";
             }
-        } else if ((t1.typeEquals(typeHelper.INTEGER)
-            && t2.typeEquals(typeHelper.DURATION))
-            || (t1.typeEquals(typeHelper.DURATION)
-            && t2.typeEquals(typeHelper.INTEGER))) {
+        } else if ((isNumber(t1) && isDuration(t2))
+            || (isDuration(t1) && isNumber(t2))) {
             if (op.wrappedEquals("*")) {
                 return "jadescript.lang.Duration.multiply(" + op1c +
                     ", " + op2c + ")";
@@ -218,26 +255,20 @@ public class MultiplicativeExpressionSemantics
                 return "jadescript.lang.Duration.divide(" + op1c +
                     ", " + op2c + ")";
             }
-        } else if ((t1.typeEquals(typeHelper.REAL)
-            && t2.typeEquals(typeHelper.DURATION))
-            || (t1.typeEquals(typeHelper.DURATION)
-            && t2.typeEquals(typeHelper.REAL))) {
-            if (op.wrappedEquals("*")) {
-                return "jadescript.lang.Duration.multiply(" + op1c +
-                    ", " + op2c + ")";
-            } else if (op.wrappedEquals("/")) {
-                return "jadescript.lang.Duration.divide(" + op1c +
-                    ", " + op2c + ")";
-            }
-        }
-        String c1 = op1c;
-        String c2 = op2c;
-        if (typeHelper.implicitConversionCanOccur(t1, t2)) {
-            c1 = typeHelper.compileImplicitConversion(c1, t1, t2);
         }
 
-        if (typeHelper.implicitConversionCanOccur(t2, t1)) {
-            c2 = typeHelper.compileImplicitConversion(c2, t2, t1);
+        String c1 = op1c;
+        String c2 = op2c;
+
+        ImplicitConversionsHelper implicits =
+            module.get(ImplicitConversionsHelper.class);
+
+        if (implicits.implicitConversionCanOccur(t1, t2)) {
+            c1 = implicits.compileImplicitConversion(c1, t1, t2);
+        }
+
+        if (implicits.implicitConversionCanOccur(t2, t1)) {
+            c2 = implicits.compileImplicitConversion(c2, t2, t1);
         }
         return c1 + " " + op.orElse("*") + " " + c2;
 
@@ -255,40 +286,37 @@ public class MultiplicativeExpressionSemantics
                 op2,
                 state
             );
-        final TypeHelper typeHelper = module.get(TypeHelper.class);
-        if (t1.typeEquals(typeHelper.DURATION)
-            && t2.typeEquals(typeHelper.DURATION)) {
+        final BuiltinTypeProvider builtins =
+            module.get(BuiltinTypeProvider.class);
+        final ImplicitConversionsHelper implicits =
+            module.get(ImplicitConversionsHelper.class);
+
+        final TypeComparator comparator = module.get(TypeComparator.class);
+
+        if (isDuration(t1) && isDuration(t2)) {
             if (op.wrappedEquals("/")) {
-                return typeHelper.REAL;
+                return builtins.real();
             }
-        } else if ((t1.typeEquals(typeHelper.INTEGER)
-            && t2.typeEquals(typeHelper.DURATION))
-            || (t1.typeEquals(typeHelper.DURATION)
-            && t2.typeEquals(typeHelper.INTEGER))) {
+        } else if ((isNumber(t1) && isDuration(t2))
+            || (isDuration(t1) && isNumber(t2))) {
             if (op.wrappedEquals("*") || op.wrappedEquals("/")) {
-                return typeHelper.DURATION;
-            }
-        } else if ((t1.typeEquals(typeHelper.REAL)
-            && t2.typeEquals(typeHelper.DURATION))
-            || (t1.typeEquals(typeHelper.DURATION)
-            && t2.typeEquals(typeHelper.REAL))) {
-            if (op.wrappedEquals("*") || op.wrappedEquals("/")) {
-                return typeHelper.DURATION;
+                return builtins.duration();
             }
         }
-        if (typeHelper.implicitConversionCanOccur(t1, t2)) {
+        if (implicits.implicitConversionCanOccur(t1, t2)) {
             t1 = t2;
         }
 
-        if (typeHelper.implicitConversionCanOccur(t2, t1)) {
+        if (implicits.implicitConversionCanOccur(t2, t1)) {
             t2 = t1;
         }
 
-        if (t2.typeEquals(t1)) {
+
+        if (comparator.compare(t1, t2).is(equal())) {
             return t2;
-        } else {
-            return typeHelper.REAL;
         }
+
+        return builtins.real();
     }
 
 
@@ -298,8 +326,7 @@ public class MultiplicativeExpressionSemantics
     ) {
         final MatchesExpressionSemantics mes =
             module.get(MatchesExpressionSemantics.class);
-        return Maybe.toListOfMaybes(input.__(Multiplicative::getMatches))
-            .stream()
+        return Maybe.someStream(input.__(Multiplicative::getMatches))
             .filter(Maybe::isPresent)
             .map(x -> new SemanticsBoundToExpression<>(mes, x));
     }
@@ -311,13 +338,13 @@ public class MultiplicativeExpressionSemantics
         StaticState state,
         BlockElementAcceptor acceptor
     ) {
-        if (input == null) return "";
-        final List<Maybe<Matches>> matches = Maybe.toListOfMaybes(
-            input.__(Multiplicative::getMatches)
-        );
-        final List<Maybe<String>> multiplicativeOps = Maybe.toListOfMaybes(
-            input.__(Multiplicative::getMultiplicativeOp)
-        );
+        if (input == null) {
+            return "";
+        }
+        final MaybeList<Matches> matches =
+            input.__toList(Multiplicative::getMatches);
+        final MaybeList<String> multiplicativeOps =
+            input.__toList(Multiplicative::getMultiplicativeOp);
         return associativeCompile(matches, multiplicativeOps, state, acceptor);
     }
 
@@ -327,21 +354,18 @@ public class MultiplicativeExpressionSemantics
         Maybe<Multiplicative> input,
         StaticState state
     ) {
-        final List<Maybe<Matches>> matches = Maybe.toListOfMaybes(
-            input.__(Multiplicative::getMatches)
-        );
-        final List<Maybe<String>> multiplicativeOps = Maybe.toListOfMaybes(
-            input.__(Multiplicative::getMultiplicativeOp)
-        );
+        final MaybeList<Matches> matches =
+            input.__toList(Multiplicative::getMatches);
+        final MaybeList<String> multiplicativeOps =
+            input.__toList(Multiplicative::getMultiplicativeOp);
         return associativeInfer(matches, multiplicativeOps, state);
     }
 
 
     @Override
     protected boolean mustTraverse(Maybe<Multiplicative> input) {
-        final List<Maybe<Matches>> matches = Maybe.toListOfMaybes(
-            input.__(Multiplicative::getMatches)
-        );
+        final MaybeList<Matches> matches =
+            input.__toList(Multiplicative::getMatches);
         return matches.size() == 1;
     }
 
@@ -350,8 +374,8 @@ public class MultiplicativeExpressionSemantics
     protected Optional<? extends SemanticsBoundToExpression<?>>
     traverseInternal(Maybe<Multiplicative> input) {
         if (mustTraverse(input)) {
-            final List<Maybe<Matches>> matches =
-                Maybe.toListOfMaybes(input.__(Multiplicative::getMatches));
+            final MaybeList<Matches> matches =
+                input.__toList(Multiplicative::getMatches);
 
             return Optional.of(new SemanticsBoundToExpression<>(
                 module.get(MatchesExpressionSemantics.class),
@@ -373,12 +397,14 @@ public class MultiplicativeExpressionSemantics
 
 
     public boolean validateAssociative(
-        List<Maybe<Matches>> operands,
-        List<Maybe<String>> operators,
+        MaybeList<Matches> operands,
+        MaybeList<String> operators,
         StaticState state,
         ValidationMessageAcceptor acceptor
     ) {
-        if (operands.isEmpty()) return VALID;
+        if (operands.isEmpty()) {
+            return VALID;
+        }
         final MatchesExpressionSemantics mes =
             module.get(MatchesExpressionSemantics.class);
         IJadescriptType t = mes.inferType(operands.get(0), state);
@@ -425,22 +451,23 @@ public class MultiplicativeExpressionSemantics
         Maybe<String> operator,
         ValidationMessageAcceptor acceptor
     ) {
-        TypeHelper th = module.get(TypeHelper.class);
+        final BuiltinTypeProvider builtins =
+            module.get(BuiltinTypeProvider.class);
         ValidationHelper vh = module.get(ValidationHelper.class);
 
-        List<IJadescriptType> durationIntReal = Arrays.asList(
-            th.INTEGER,
-            th.REAL,
-            th.DURATION
+        List<IJadescriptType> durationIntReal = List.of(
+            builtins.integer(),
+            builtins.real(),
+            builtins.duration()
         );
-        boolean t1Expected = vh.assertExpectedTypes(
+        boolean t1Expected = vh.assertExpectedTypesAny(
             durationIntReal,
             t1,
             "InvalidMultiplicativeOperation",
             op1,
             acceptor
         );
-        boolean t2Expected = vh.assertExpectedTypes(
+        boolean t2Expected = vh.assertExpectedTypesAny(
             durationIntReal,
             t2,
             "InvalidMultiplicativeOperation",
@@ -452,40 +479,52 @@ public class MultiplicativeExpressionSemantics
             return INVALID;
         }
 
-        List<IJadescriptType> intReal = Arrays.asList(th.INTEGER, th.REAL);
-        if (t1.typeEquals(th.DURATION)) {
+        if (isDuration(t1)) {
             if (operator.wrappedEquals("*")) {
-                return vh.assertExpectedTypes(
-                    intReal,
+                return vh.assertExpectedTypesAny(
+                    List.of(
+                        builtins.integer(),
+                        builtins.real()
+                    ),
                     t2,
                     "InvalidMultiplicativeOperation",
                     op2,
                     acceptor
                 );
-            } else if (operator.wrappedEquals("/")) {
+            }
+
+            if (operator.wrappedEquals("/")) {
                 // always ok
                 return VALID;
-            } else { // assuming '%'
-                op1.safeDo(op1safe -> {
-                    acceptor.acceptError(
-                        "Invalid operation " + operator.orElse("") +
-                            " for duration type",
-                        op1safe,
-                        null,
-                        ValidationMessageAcceptor.INSIGNIFICANT_INDEX,
-                        "InvalidMultiplicativeOperation"
-                    );
-                });
-                return INVALID;
             }
-        } else if (t1.typeEquals(th.INTEGER) || t1.typeEquals(th.REAL)) {
+
+            // assuming operator is '%'
+            op1.safeDo(op1safe -> {
+                acceptor.acceptError(
+                    "Invalid operation " + operator.orElse("") +
+                        " for duration type",
+                    op1safe,
+                    null,
+                    ValidationMessageAcceptor.INSIGNIFICANT_INDEX,
+                    "InvalidMultiplicativeOperation"
+                );
+            });
+            return INVALID;
+        }
+
+        if (isNumber(t1)) {
             if (operator.wrappedEquals("*")) {
                 // always ok
                 return VALID;
-            } else if (operator.wrappedEquals("/")
+            }
+
+            if (operator.wrappedEquals("/")
                 || operator.wrappedEquals("%")) {
-                return vh.assertExpectedTypes(
-                    intReal,
+                return vh.assertExpectedTypesAny(
+                    List.of(
+                        builtins.real(),
+                        builtins.integer()
+                    ),
                     t2,
                     "InvalidMultiplicativeOperation",
                     op2,
@@ -527,10 +566,10 @@ public class MultiplicativeExpressionSemantics
         StaticState state,
         ValidationMessageAcceptor acceptor
     ) {
-        final List<Maybe<Matches>> operands = Maybe.toListOfMaybes(input.__(
-            Multiplicative::getMatches));
-        final List<Maybe<String>> operators = Maybe.toListOfMaybes(input.__(
-            Multiplicative::getMultiplicativeOp));
+        final MaybeList<Matches> operands =
+            input.__toList(Multiplicative::getMatches);
+        final MaybeList<String> operators =
+            input.__toList(Multiplicative::getMultiplicativeOp);
         return validateAssociative(operands, operators, state, acceptor);
     }
 
